# scpa_matrix

./: CMakeLists.txt  Makefile  README.md  progetto.out  results.json  test_matrix.mtx
CUDA_include/: csr_kernel0.cuh  csr_kernel1.cuh  csr_kernel2.cuh  csr_kernel3.cuh  csr_kernel4.cuh  csr_kernel5.cuh  cudacsr.h  cudahll.h  cudahll1d.h  hll_kernel0.cuh  hll_kernel1.cuh  hll_kernel2.cuh  hll_kernel3.cuh
CUDA_src/: cudacsr.cu  cudahll.cu  cudahll1d.cu
include/: csr_matrix.h  hll_matrix.h  json_results.h  matrix.h  matrix_analysis.h  matrix_io.h  matrmult.h  openMP_prim.h
src/: csr_matrix.c  generatematrix.py  graphs.py  hll_matrix.c  json_results.c  main.c  matrix_analysis.c  matrix_to_CSR.c  matrmult.c  merge.py  mmio.c  openMP_prim.c  print_result.py  results.json
test_matrix/: test_matrix.mtx
